[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mintmaker-schedule-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cron-converter>=1.3.1",
    "kubernetes>=35.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mintmaker_schedule_calculator"]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, isort
